# fpl-mini-league-leaderboard

./: league_history.json  template.json
front-end/: package-lock.json  package.json
front-end/components/: CupBrackets.tsx  CurrentLeagueOutput.tsx  CurrentLeagueTable.tsx  CurrentWinner.tsx  DetailedLeagueHistory.tsx  Graph.tsx  Header.tsx  LeaderBoard.tsx  LeagueHistory.tsx  MyLinks.tsx  Skeleton.tsx
front-end/components/loading/: CurrentLeagueOutputLoading.tsx  CurrentLeagueTableLoading.tsx  CurrentWinnerLoading.tsx  DetailedHistoryTableLoading.tsx  GraphLoading.tsx  LeaderboardLoading.tsx  LeagueHistoryLoading.tsx
front-end/pages/: index.tsx
front-end/styles/: globals.css
front-end/utils/: prev_season_data.ts  previous_season_manually_saved_data.json  types.ts
lambda/: Cargo.toml
lambda/src/: main.rs
lambda/src/models/: event_status.rs  league_standings.rs  result_struct.rs
my-league-data-lambda/: Cargo.toml
my-league-data-lambda/src/: constants.rs  event_status.rs  get_league_cup.rs  get_league_history.rs  get_league_standings.rs  league_cup.rs  league_standings.rs  league_standings_cup.rs  live_event_data.rs  main.rs  manager_picks.rs  player.rs  result_struct.rs
