[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.8.5"
chrono = "0.4.24"
http = "0.2.9"
lambda_runtime = "0.8.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.26.0", features = ["full"] }
