[package]
name = "my-league-data-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.7.3"
chrono = "0.4.24"
http = "0.2.9"
lambda_runtime = "0.7.3"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
ureq = {version="2.6.2", features=["json"]}
